<resources>
    <string name="facebook_app_id" translatable="false">751859975469440</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb751859975469440</string>
    <string name="google_web_client_id" translatable="false">637344595331-9l7uhbim04d346j8sgt0ifbg5mcfc9ep.apps.googleusercontent.com</string>
    <string name="app_name">Ecommerce</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="signin">Sign In</string>
    <string name="login_with_facebook">Sign In with Facebook</string>
    <string name="login_with_google">Sign In with Google</string>
    <string name="error_this_field_required">This field is required</string>
    <string name="password">Password</string>
    <string name="home">Home</string>
    <string name="feed">Feed</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="error_unknown">error unknown</string>
    <string name="error_conn_generic">Connection problem</string>
    <string name="error_conn_time_out">Connection Timed Out</string>
    <string name="search">Search...</string>
    <string name="empty">Empty</string>
    <string name="loading">Loading...</string>
    <string name="retry">Retry</string>
    <string name="tap_to_retry">Tap to Retry</string>
    <string name="product_detail">Product Detail</string>
    <string name="buy">Buy</string>
    <string name="share">Share</string>
    <string name="purchase_history">Purchase History</string>
    <string name="product_has_been_added_to_the_basket">Product has been added to the basket</string>
    <string name="product_has_been_removed">Product has been removed</string>
</resources>